--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <body>
         <main class="main">
-            <section class="container">
-                <div class="side-bar">
+            <div class="container">
+                <section class="side-bar">
                     <div class="container">
                         <picture class="person-image">
                             <source srcset="dist/img/perfil_eduardo_tell_08_2020.png" type="image/png">
@@ -36,9 +36,9 @@
                     <div class="footer">
                         <p>© 2020 All rights reserved.</p>
                     </div>
-                </div>
-                <div class="right">
-                    <div class="container">
+                </section>
+                <section class="right">
+                    <div class="center-content">
                         <div class="header">
                             <h1 class="title">Eduardo Tell</h1>
                             <h5 class="sub-title">Fron-End Developer</h5>
@@ -92,8 +92,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </main>
     </body>
 
